methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:3: error: Unit does not take parameters
makepattern(); left(); forward(); forward(); forward(); forward(); right(); makepattern(); forward(); forward(); forward(); forward(); right()(); forward(); forward(); forward(); forward(); right(); makepattern(); right(); forward(); forward(); forward(); forward(); left(); makepattern() } 
                                                                                                                                              ^